feat: List KuboCD release pods and events
